# MosaicPy

./: .gitignore  README.md  pyproject.toml  setup.py
mosaicpy/: __init__.py
mosaicpy/annotations/: __init__.py  time_it.py
mosaicpy/cli/: gpt.py
mosaicpy/collections/: __init__.py  list.py  lists.py
mosaicpy/concurrent/: __init__.py
mosaicpy/llm/: __init__.py  chat.py  prompt.py  schema.py  token.py
mosaicpy/llm/anthropic/: agent.py
mosaicpy/llm/openai/: agent.py  chat.py  function.py  stream_aggregator.py  tools.py
mosaicpy/ml/: text_rank.py  vector.py
mosaicpy/ml/metrics/: __init_.py  ranking.py
mosaicpy/notebook/: __init__.py
mosaicpy/utils/: __init__.py  file.py  json.py  notebook.py  time.py
tests/tests/: test_agent.py  test_collections.py  test_concurrent.py  test_json.py  test_openai.py  test_pmap.py  test_time.py
utils/: time.py
