[tool.poetry]
name = "mosaicpy"
version = "0.1.1"
description = ""
authors = ["lan <lanyuyang@gmail.com>"]
readme = "README.md"
packages = [{ include = "mosaicpy", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
charset-normalizer = "^3.1.0"
urllib3 = "^1.26.16"
tiktoken = "^0.4.0"
numpy = "^1.25.2"
pytz = "^2023.3.post1"
openai = "^1.3.2"

[tool.poetry.scripts]
gpt = 'mosaicpy.cli.gpt:main'

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
