[tool.poetry]
name = "mosaicpy"
version = "0.1.8"
description = ""
authors = ["lan <lanyuyang@gmail.com>"]
readme = "README.md"
packages = [{ include = "mosaicpy", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
charset-normalizer = "^3.1.0"
urllib3 = "^1.26.16"
tiktoken = "^0.4.0"
numpy = "^1.25.2"
pytz = "^2023.3.post1"
openai = "^1.3.2"
numexpr = "^2.8.7"
colorama = "^0.4.6"
fire = "^0.5.0"
pydantic = "<2.0.0"

[tool.poetry.scripts]
gpt = 'mosaicpy.cli.gpt:main'

[tool.poetry.dev-dependencies]
pytest = "^6.2"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E5", "E1"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
